[touhou] awsome-github

--- a/传教用.md
+++ b/传教用.md
@@ -9,3 +9,7 @@
 * http://www.bilibili.com/video/av3388284/
 
 * http://thwiki.cc/%E4%B8%9C%E6%96%B9Project
+
+# WTF
+
+* https://github.com/InubashiriMomizi?tab=following
